--- a/Study.html
+++ b/Study.html
@@ -7,6 +7,7 @@
 	        <link href="style/main.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
+		<img src="images/logo.png" class="logo">
 	        <div id="wrapper">
 						<div class="layer1">
 	            <header>
@@ -25,23 +26,29 @@
 
 	            </header>
 
-							<aside_l>
+							<aside_l class="border">
 								<h1>Історія</h1>
 								<p>Вперше дистрибутив Debian анонсував Ян Мердок, тоді студент Університету Purdue, 16 серпня 1993 року. На початку Мердок назвав свою систему «Випуск Дебіен Лінукс» («Debian Linux Release»). Назва «Дебіен» була утворена від перших літер його імені та імені тодішньої дівчини (згодом — дружини, нині — колишньої) Дебри: Debra + Ian (/dɛbˈiːjən/). Він мав на меті створити новий дистрибутив, котрий буде відкрито розроблятись, як Linux та GNU, старанно і сумлінно збиратись та якісно супроводжуватись і підтримуватись. </p>
 							</aside_l>
 
 	            <main>
-	                <h1>Опис</h1>
-	                <p>Debian (Debian GNU/Linux) — комп’ютерна операційна система, основний дистрибутив якої складається тільки з вільного програмного забезпечення (main-секції архіву Debian). Популярний та впливовий дистрибутив GNU/Linux. Багатоцільова операційна система, що використовується: настільними комп'ютерами, лептопами, серверами, вбудованими системами. Існують проекти на основі ядер: Debian GNU/Hurd, Debian GNU/kFreeBSD, Debian GNU/kNetBSD. </p>
+	                <h1 >Опис</h1>
+	                <p class="border">Debian (Debian GNU/Linux) — комп’ютерна операційна система, основний дистрибутив якої складається тільки з вільного програмного забезпечення (main-секції архіву Debian).  </p>
+									<p class="border">Популярний та впливовий дистрибутив GNU/Linux. Багатоцільова операційна система, що використовується: настільними комп'ютерами, лептопами, серверами, вбудованими системами. Існують проекти на основі ядер: Debian GNU/Hurd, Debian GNU/kFreeBSD, Debian GNU/kNetBSD. </p>
 	            </main>
 
-	            <aside_r>
+
+	            <aside_r class="border">
 	                <h1>Процедура розробки</h1>
 	                <p>Пакунки, що знаходяться у розробці вивантажуються до нестабільної (відомої також як Сід (Sid)) та експериментальної гілок проекту. Це, як правило, нормальні, стабільні версії програм, випущені основним розробником, але зі специфічними для Debian модифікаціями, які можуть спричинити проблеми. Нестабільні чи не цілком готові програми переносяться до експериментальної гілки.
-Після тимчасового перебування у нестабільній гілці (в залежності від необхідності внесених у програму змін) пакунок автоматично мігрує до тестової гілки. Це, щоправда, відбувається лише в тому випадку, якщо у ньому не знаходять критичних помилок і якщо їх не містять інші програми, потрібні для функціонування даної.
-Оскільки оновлення стабільних випусків Дебіен не містить поновлень програм, а лише поновлення безпеки, багато користувачів обирають тестову та нестабільну гілки з новішими пакунками. Проте, ці гілки менше протестовані, а нестабільна ще й не отримує вчасно оновлень безпеки. </p>
+
+ </p>
 	            </aside_r>
 	        </div>
 					</div>
+					</div>
+					<footer id="footer">
+			      ПІ-13-1 Бабала В.І.
+			    </footer>
 	    </body>
 	</html>
